clean up build.gradle